# graphics

./: CMakeLists.txt  README.md  laba2graphics_task11.cpp  laba3.cpp  main.cpp  pipeline.cpp  pipeline.h  readme.txt  transformation.cpp  transformation.h
